# ds

./: .gitignore  README.md  container.py  ds.py  main.py  pyproject.toml  requirements.txt  settings.py  setup.py  snapshot.py  utils.py
.github/workflows/: checks.yml  publish.yml
docker_snapshot/: __init__.py  container.py  main.py  snapshot.py  utils.py
images/: rsync
src/docker_snapshot/: __init__.py  container.py  settings.py  snapshot.py  utils.py
src/docker_snapshot/cli/: __init__.py  decorators.py
