[tool.poetry]
name = "docker-snapshot"
homepage = "https://github.com/occamz/ds"
documentation = "https://github.com/occamz/ds"
version = "1.0.11"
description = "`ds` is a development utility for managing snapshots inside a docker container."
authors = ["occamz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
click-aliases = "^1.0.4"
colorama = "^0.4.6"
hruid = "^0.0.3"
rich = "^13.7.1"
PyYAML = "^6.0.1"
docker = "^7.1.0"
six = "^1.16.0"

[tool.poetry.scripts]
ds = "docker_snapshot:execute_cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
