[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "docker-snapshot"
dynamic = ["version"]
description = "`ds` is a development utility for managing snapshots inside a docker container."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = []
authors = [{ name = "occamz" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click>=8.1.7",
    "click-aliases>=1.0.4",
    "colorama>=0.4.6",
    "hruid>=0.0.3",
    "rich>=13.7.1",
    "PyYAML>=6.0.1",
    "docker>=7.1.0",
    "six>=1.16.0",
]


[project.urls]
Homepage = "https://github.com/occamz/ds"
Documentation = "https://github.com/occamz/ds#readme"
Issues = "https://github.com/occamz/ds/issues"
Source = "https://github.com/occamz/ds"


[project.scripts]
ds = "docker_snapshot:execute_cli"


[tool.hatch.version]
path = "docker_snapshot/__about__.py"


[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:docker_snapshot}"


[tool.hatch.envs.hatch-test]
extra-args = ["-vv"]
randomize = true


[tool.coverage.run]
source_pkgs = ["docker_snapshot"]
branch = true
parallel = true
omit = ["docker_snapshot/__about__.py"]

[tool.coverage.paths]
jono = ["docker_snapshot", "*/ds/docker_snapshot"]
tests = []

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if t.TYPE_CHECKING:"]


[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
packages = ["docker_snapshot"]
