[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "docker-snapshot"
dynamic = ["version"]
description = "`ds` is a development utility for managing snapshots inside a docker container."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = []
authors = [{ name = "occamz" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click>=8.1.7",
    "click-aliases>=1.0.4",
    "colorama>=0.4.6",
    "hruid>=0.0.3",
    "rich>=13.7.1",
    "PyYAML>=6.0.1",
    "docker>=7.1.0",
    "six>=1.16.0",
]


[project.urls]
Homepage = "https://github.com/occamz/ds"
Documentation = "https://github.com/occamz/ds#readme"
Issues = "https://github.com/occamz/ds/issues"
Source = "https://github.com/occamz/ds"


[project.scripts]
ds = "docker_snapshot:execute_cli"


[tool.hatch.version]
path = "src/docker_snapshot/__about__.py"


[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "types-docker"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/docker_snapshot}"


[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_incomplete_stub = true
no_implicit_optional = true
no_implicit_reexport = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_defs = true


[tool.hatch.envs.hatch-test]
extra-args = ["-vv"]
randomize = true


[tool.coverage.run]
source_pkgs = ["docker_snapshot"]
branch = true
parallel = true
omit = ["src/docker_snapshot/__about__.py"]

[tool.coverage.paths]
docker_snapshot = ["src/docker_snapshot", "*/ds/src/docker_snapshot"]
tests = []

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if t.TYPE_CHECKING:"]


[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["C90", "E", "F", "I", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 0
order-by-type = true
no-lines-before = [
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]

[tool.ruff.format]
quote-style = "double"


[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel]
packages = ["src/docker_snapshot"]
